<resources>
    <string name="app_name">KIN-SI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or">OR</string>
    <string name="you_are_signed_in">You are Signed In</string>
    <string name="sign_out">Sign Out</string>
</resources>